--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
+
 buildscript {
-    ext.gradle_version = '7.1.3'
-    ext.kotlin_version = '1.6.10'
-    ext.compose_version = '1.1.1'
+    ext.gradle_version = '8.0.2'
+    ext.kotlin_version = '1.8.10'
+    ext.compose_version = '1.4.3'
     repositories {
         google()
         mavenCentral()
@@ -11,6 +14,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.46.0'
     }
 }
 
