--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,11 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+# The Gradle build cache is a cache mechanism that aims to save time by reusing outputs produced by other builds.
+# https://docs.gradle.org/current/userguide/build_cache.html
+#org.gradle.caching=true # disabled because of issues while swiching branches
+# The configuration cache is a feature that significantly improves build performance.
+# https://docs.gradle.org/current/userguide/configuration_cache.html
+#org.gradle.unsafe.configuration-cache=true # disabled because of issues while swiching branches
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-# Enables namespacing of each library's R class so that its R class includes only the
-# resources declared in the library itself and none from the library's dependencies,
-# thereby reducing the size of the R class for that library
-android.nonTransitiveRClass=true
