--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,15 +9,20 @@ allprojects {
 ext {
 
     // APP VERSION
-    androidVersionCode          = 1
-    androidVersionName          = '1.0.0' // REMEMBER: also update README.md
+    androidVersionCode             = 1
+    androidVersionName             = '1.0.0' // REMEMBER: also update README.md
+    androidNamespace               = 'com.lukelorusso.codetextfield'
 
     // ANDROID VERSION
-    androidMinSdkVersion        = 21
-    androidTargetSdkVersion     = 33
+    androidMinSdkVersion           = 21
+    androidTargetSdkVersion        = 33
+
+    // COMMON VERSION
+    androidxActivityComposeVersion = '1.7.2'
+    androidxCoreVersion            = '1.10.1'
 
     // DEPENDENCY CHECK STRATEGY
-    isNonStable                 = { String version ->
+    isNonStable                    = { String version ->
         def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { version.toUpperCase().contains(it) }
         def regex = /^[0-9,.v-]+(-r)?$/
         return !stableKeyword && !(version ==~ regex)
