Fixing build.gradle definitions

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,9 +9,11 @@ allprojects {
 ext {
 
     // APP VERSION
+    androidLibraryArtifactId       = 'CodeTextField'
+    androidLibraryGroupId          = 'com.github.lukelorusso'
+    androidNamespace               = 'com.lukelorusso.codetextfield'
     androidVersionCode             = 1
     androidVersionName             = '1.0.0' // REMEMBER: also update README.md
-    androidNamespace               = 'com.lukelorusso.codetextfield'
 
     // ANDROID VERSION
     androidMinSdkVersion           = 21
