--- a/codetextfield/build.gradle
+++ b/codetextfield/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'com.android.library'
-    id 'kotlin-android'
-    id 'org.jetbrains.kotlin.android'
     id 'com.github.ben-manes.versions'
+    id 'kotlin-android'
+    id 'maven-publish'
+    id 'org.jetbrains.kotlin.android'
 }
-
-group='com.github.lukelorusso'
 
 android {
     namespace androidNamespace
@@ -48,19 +47,40 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    publishing {
+        singleVariant("release") {
+            //withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
     implementation "androidx.core:core-ktx:$androidxCoreVersion"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.ui:ui-viewbinding:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     // DEPENDENCY CHECK STRATEGY
     tasks.named("dependencyUpdates").configure {
         rejectVersionIf {
             isNonStable(it.candidate.version)
+        }
+    }
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = androidLibraryGroupId
+            artifactId = androidLibraryArtifactId
+            version = androidVersionName
+
+            afterEvaluate {
+                from components.release
+            }
         }
     }
 }
